# Factorio-server-Mod-Manager

./: .gitignore  Cargo.toml  build-all-targets.sh
src/: check_update.rs  config.rs  logging.rs  main.rs
src/updater/: check_update.rs  mod.rs  mod_updater.rs
