[package]
name = "factorio-server-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
color-eyre = "0.6.5"
futures = "0.3.31"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
