[package]
name = "factorio-server-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
color-eyre = "0.6.5"
osc8 = "0.1.0"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
tracing = { version = "0.1.41", features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "registry",
    "local-time",
] }
walkdir = "2.5.0"
zip = "4.2.0"

[dependencies.openssl]
version = "0.10.73"
features = ["vendored"]
